[gd_scene load_steps=2 format=2]

[ext_resource path="res://MENU PRINCIPAL.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_right = 12.0
margin_bottom = 20.0
text = "JOC LLUITA"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
margin_top = 24.0
margin_right = 83.0
margin_bottom = 44.0
text = "TD"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="."]
margin_top = 48.0
margin_right = 83.0
margin_bottom = 68.0
text = "PONG"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button4" type="Button" parent="."]
margin_top = 72.0
margin_right = 104.0
margin_bottom = 92.0
text = "PLATAFORMES"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
